# comp362

./: README.md
cpuScheduler/: CMakeLists.txt
cpuScheduler/inc/: cpuScheduler.h  processQueue.h
cpuScheduler/input/: in-RR.txt  in-SJF.txt
cpuScheduler/src/: cpuScheduler.c  processQueue.c
inverted/: CMakeLists.txt  typescript-processed.txt  typescript.txt
inverted/inc/: inverted.h
inverted/src/: inverted.c  testInverted.c
matrixMult/: CMakeLists.txt  break.txt  in.txt  in2.txt  in3.txt  matrixMult  matrixMult.c  matrixmult.h  typescript-processed.txt  typescript.txt
philosophers/: philoBase
philosophers/HernandezJamieLab07/: CMakeLists.txt  philoBase.c  philoWithMonitor.c  typescript-processed.txt  typescript.txt  typescript2-processed.txt  typescript2.txt  typescript3-processed.txt  typescript3.txt
proc_hier/: CMakeLists.txt  iam.c  proc_hier.c
project1/task 1/disk/: CMakeLists.txt  disk.c  disk.h  test_disk.c
project1/task 2/timer/: CMakeLists.txt  timer_posix.c
project1/task 3/cidev/cidev/cidevmod/: Makefile  ci_dev.c
project1/task 3/cidev/cidev/inc/: ci_dev.h
project1/task 3/cidev/cidev/test_cidev/: CMakeLists.txt  test_cidev.c
replace/: CMakeLists.txt  typescript-processed.txt  typescript.txt
replace/inc/: lruList.h  optArray.h  replace.h
replace/src/: lruList.c  optArray.c  replace.c
solvency/: CMakeLists.txt  typescript-processed.txt  typescript.txt  typescript2-processed.txt  typescript2.txt  typescript3-processed.txt  typescript3.txt
solvency/src/: arrays.c  arrays.h  bank.c  bank.h  solvency.c
